<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FTClient!</string>
    <string name="app_name">FTClient</string>
    <string name="update_status_hint">Please input your messages.</string>
    <string name="update_status">UpdateStatus</string>
    <string name="response">Response</string>
    <string name="input_server">Please input the server url</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="default_server_url">https://216.24.194.197:8443/HelloServlet</string>
    <!-- string name="default_server_url">http://172.21.30.143:8080/HelloServlet</string -->
    <string name="clear_response">Clear</string>
    <string name="get_user_timeline">GetUserTimeline</string>
    <string name="execeed_limit_length">Exceed the max length 140.</string>
    <string name="register">Register</string>

    <!-- UploadPhoto -->
    <string name="upload_photo">UploadPhoto</string>
    <string name="capture_photo">Capture</string>
    <string name="choose_from_local">Local File</string>
    <string name="choose_from_local_failed">Local File Failed</string>

    <!-- Register -->
    <string name="register_user_name_input">Please input user name</string>
    <string name="register_password_input">Please input password</string>
    <string name="register_email_input">Please input email</string>
    <string name="register_twitter_user_name_input">Please input Twitter user name</string>
    <string name="register_twitter_password_input">Please input Twitter password</string>
    <string name="wrong_param">Bad parameters,Please check your input.</string>
    <string name="register_success">Register success.</string>
    <string name="back">Back</string>

    <!-- Tab -->
    <string name="tab_hometimeline">Timeline</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_about">About</string>
    <string name="tab_post">Post</string>
    <string name="tab_register">Register</string>
    <string name="check_settings">Save</string>
    <string name="post_status">Post</string>
    <string name="store_your_settings">Your settings are saved succesfully.</string>
    <string name="please_wait">Please wait,it is fucking the GFW.\nAcross the Great Wall, we can reach every corner in the world.\n......</string>

</resources>