<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:scrollbars="vertical">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">
		<Button android:id="@+id/update_status_register_button"
			android:layout_width="fill_parent" android:layout_height="35dip"
			android:text="@string/register"></Button>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/update_status_username_input_edittext"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:singleLine="true" android:hint="@string/input_username"
				android:layout_weight="1"></EditText>
			<EditText android:id="@+id/update_status_password_input_edittext"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:singleLine="true" android:hint="@string/input_password"
				android:layout_weight="1" android:inputType="textPassword"></EditText>
		</LinearLayout>

		<EditText android:id="@+id/update_status_server_input_edittext"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:hint="@string/input_server"
			android:text="@string/default_server_url"></EditText>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<RelativeLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1.0">
				<EditText android:id="@+id/update_status_input_edittext"
					android:layout_width="fill_parent" android:layout_weight="1.0"
					android:layout_height="100dip" android:hint="@string/update_status_hint"
					android:gravity="top"></EditText>
				<Button android:id="@+id/update_status_clear_input_button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="0" android:background="@drawable/ic_delete"
					android:layout_alignParentRight="true" android:visibility="gone"
					android:paddingTop="5dip" android:paddingRight="5dip"></Button>
				<TextView android:id="@+id/update_status_length_textview"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_alignParentBottom="true"
					android:layout_alignParentRight="true" android:padding="5dip"></TextView>
			</RelativeLayout>
			<Button android:id="@+id/update_status_capture_button"
				android:layout_width="40dip" android:layout_height="40dip"
				android:layout_weight="0" android:background="@drawable/camera"
				android:layout_alignParentRight="true" android:layout_gravity="center"></Button>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:text="@string/update_status" android:id="@+id/update_status_update_button"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="1.0"></Button>
			<ProgressBar android:id="@+id/update_status_progressbar"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:visibility="gone" android:layout_gravity="right"></ProgressBar>
		</LinearLayout>
		<TextView android:text="@string/response"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:visibility="gone"></TextView>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:text="@string/get_user_timeline" android:id="@+id/get_user_timeline_button"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="1.0"></Button>
			<Button android:text="@string/clear_response"
				android:id="@+id/update_status_clear_response_button"
				android:layout_width="wrap_content" android:layout_height="fill_parent"></Button>
		</LinearLayout>

		<ScrollView android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:scrollbars="vertical"
			android:layout_weight="1.0">
			<TextView android:id="@+id/update_status_response_textview"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				style="@style/ResponseTextViewStyle" android:autoLink="all"
				android:linksClickable="true"></TextView>
		</ScrollView>

	</LinearLayout>
</ScrollView>
