<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/register_username_input_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_user_name_input"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/register_password_input_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_input"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/register_email_input_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_input"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/register_twitter_username_input_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_twitter_user_name_input"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/register_twitter_password_input_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_twitter_password_input"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/register_button"
            style="@style/CommonButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" >
        </Button>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/register_progress_bar"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:visibility="gone" >
            </ProgressBar>

            <TextView
                android:id="@+id/register_response_textview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>