<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <MultiAutoCompleteTextView
                    android:id="@+id/update_status_input_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="100dip"
                    android:layout_weight="1.0"
                    android:gravity="top"
                    android:hint="@string/update_status_hint" >
                </MultiAutoCompleteTextView>

                <Button
                    android:id="@+id/update_status_clear_input_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="0"
                    android:background="@drawable/ic_delete"
                    android:paddingRight="5dip"
                    android:paddingTop="5dip"
                    android:visibility="gone" >
                </Button>

                <TextView
                    android:id="@+id/update_status_length_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dip" >
                </TextView>
            </RelativeLayout>

            <Button
                android:id="@+id/update_status_capture_button"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="@drawable/camera" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/post_button"
                style="@style/CommonButtonStyle"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/post_status" />

            <ProgressBar
                android:id="@+id/update_status_progressbar"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:layout_gravity="right"
                android:indeterminateDrawable="@drawable/bg_progress_loading"
                android:padding="5dip"
                android:visibility="gone" >
            </ProgressBar>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:visibility="gone" >
        </TextView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/update_status_response_textview"
                style="@style/ResponseTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoLink="all"
                android:linksClickable="true" >
            </TextView>
        </ScrollView>
    </LinearLayout>

</ScrollView>